--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -4,11 +4,9 @@
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">{{ post.author }}</a>
-              <small class="text-muted">{{ post.date_posted }}</small>
+                <h2><a class="article-title" href="#">{{ post[0] }}</a></h2>
             </div>
-            <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+            <p class="article-content">{{ post[1] }}</p>
           </div>
         </article>
     {% endfor %}
