--- a/application/templates/recipe_catalog.html
+++ b/application/templates/recipe_catalog.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class=" form-group row">
-                <div class="col-6">
+                <div class="col">
                     {{ form.sort_by(class="form-control form-control-lg") }}
                 </div>
             </div>
