--- a/application/templates/recipe_catalog.html
+++ b/application/templates/recipe_catalog.html
@@ -111,4 +111,49 @@
         </div>
     </form>
 </div>
+<div class="content-section">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Search by Likes and Comments</legend>
+            <div class="form-group row text-center">
+                <div class="col form-group">
+                    {{ form.likes.label(class="form-control-label") }}
+                    {% if form.likes.errors %}
+                    {{ form.likes(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.likes.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.likes(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="col form-group">
+                    {{ form.comments.label(class="form-control-label") }}
+                    {% if form.comments.errors %}
+                    {{ form.comments(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.comments.errors %}
+                        <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.comments(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </div>
+            <div class=" form-group row">
+                <div class="col">
+                     {{ form.sort_by.label(class="form-control-label") }}
+                    {{ form.sort_by(class="form-control form-control-lg") }}
+                </div>
+            </div>
+        </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info") }}
+        </div>
+    </form>
+</div>
 {% endblock content %}
