--- a/application/templates/layout_lr.html
+++ b/application/templates/layout_lr.html
@@ -26,14 +26,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link" href="/home">Home</a>
-                    <a class="nav-item nav-link" href="/create_recipe">Create Recipe</a>
-                    <a class="nav-item nav-link" href="/recipe_catalog">Find Recipe</a>
-                    <a class="nav-item nav-link" href="/top_users">Top Users</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="/logout">Logout</a>
+                    <a class="nav-item nav-link" href="/login">Login</a>
+                    <a class="nav-item nav-link" href="/register">Register</a>
                 </div>
             </div>
         </div>
