--- a/application/static/Create_Recipe.css
+++ b/application/static/Create_Recipe.css
@@ -1,6 +1,6 @@
 body{
-    background-image: url("home6.png");
-    background-size: contain;
+    background-image: url("home.jpg");
+    background-size: cover;
 }
 
 .create-form {
