--- a/application/static/top_users.css
+++ b/application/static/top_users.css
@@ -1,10 +1,18 @@
 body{
     background-image: url("home.jpg");
     background-size: cover;
-    position: absolute;
 }
-.recipe-card {
+
+.top-user-card {
     padding: 4%;
     border-radius: 2rem;
     box-shadow: 8px 8px 8px rgba(23, 21, 21, 0.557);
+    width: 70%;
+    position: absolute;
+    margin-top: 9%
+}
+
+
+.top-users {
+    font-size: 40px;
 }
