--- a/application/templates/Login.html
+++ b/application/templates/Login.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_lr.html" %}
 {% block head %}
 {{ super() }}
 <link rel="stylesheet" href="../static/Login.css"/>
