--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -2,7 +2,8 @@
 {% block content %}
 <link rel="stylesheet" href="../static/Home.css" xmlns="http://www.w3.org/1999/html"/>
     {% for post in posts %}
-        <card><article class="media content-section recipe-card">
+        <card>
+            <article class="media content-section recipe-card">
           <div class="media-body">
             <div class="article-metadata">
                 <h2><a class="article-title" href="/recipe/{{post[2]}}">{{ post[0] }}</a></h2>
@@ -10,6 +11,6 @@
             <p class="article-content">{{ post[1] }}</p>
           </div>
         </article>
-            </card>
+        </card>
     {% endfor %}
 {% endblock content %}
