--- a/application/templates/Login.html
+++ b/application/templates/Login.html
@@ -19,7 +19,8 @@
             <div class="sign-up-div row">
                 <form action="/register" method="get" class="sign-up-form">
                     Not Registered Yet?
-                    <button type="submit" class="sign-up-btn">Sign Up</button>
+<!--                    <button type="submit" class="sign-up-btn">Sign Up</button>-->
+                    <a class="nav-item nav-link" href="/register">Sign Up</a>
                 </form>
             </div>
         </form>
